# Telecom_Custom_Churn

./: Decision_Tree_model.ipynb  Neutral_Network.ipynb  Telecom customer Churn Documentation.docx  Tree_ensemble.ipynb  best_decision_tree.pkl  best_lr.pkl  best_nn_model.h5  best_nn_model.json  logistic_model.ipynb  main .ipynb  prepared_dataset.csv  pyproject.toml  telecom_churn_utilities.py  xgboost.pkl
Documentation/: Telecom customer Churn Documentation.docx
Trained_Models/: best_decision_tree.pkl  best_lr.pkl  best_nn_model.h5  best_nn_model.json  xgboost.pkl
dataset/: prepared_dataset.csv
