[tool.poetry]
name = "detecting credit card fraud"
version = "0.1.0"
description = ""
authors = ["saad-ali06 <saadshahzad818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.4.0"
seaborn = "^0.13.1"
ipynb = "^0.5.1"
imblearn = "^0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
